--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -18,6 +18,6 @@ spring:
     timeout: 5000
   # Elasticsearch 配置
   elasticsearch:
-    uris: http://192.168.21.128:9200
+    uris: http://localhost:9200
     username: root
     password: 123456
