feat: 引入分布式锁,避免定时任务同步执行&优化ES搜索,支持搜素建议,关联题目,以及核心搜索服务的多级降级策略

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -162,6 +162,9 @@ nacos:
     group: DEFAULT_GROUP
     type: yaml
     auto-refresh: true
+    context-path:
+      exclude:
+        - com.alibaba.druid.spring.boot.autoconfigure.DruidDataSourceAutoConfigure
 # Sa-Token
 sa-token:
 #  token 名
