--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -136,8 +136,13 @@ spring:
     host: localhost
     port: 6379
     timeout: 5000
+    lettuce:
+      pool:
+        max-active: 20
+        max-wait: -1ms
+        max-idle: 8
+        min-idle: 3
   # Elasticsearch 配置
-  # todo 需替换配置，然后取消注释
   elasticsearch:
     uris: http://localhost:9200
     username: root
