--- a/pickyboy-common/guardian-spring-boot-starter/src/main/resources/application-guardian-example.yml
+++ b/pickyboy-common/guardian-spring-boot-starter/src/main/resources/application-guardian-example.yml
@@ -1,25 +1,50 @@
-# Guardian Spring Boot Starter 配置示例
+# ===================================================================
+# Guardian Starter 核心配置
+# ===================================================================
 guardian:
-  # 是否启用Guardian功能
+  # 是否启用 Guardian 功能，默认为 true
   enabled: true
 
-  # 默认计数器类型 (redis, local)
+  # 默认使用的计数器类型。可选值："redis", "local" (caffeine)
+  # 如果不配置，默认为 "redis"
   default-counter-type: redis
 
-  # 默认时间窗口配置
+  # 默认的时间窗口大小，默认为 1
   default-window-size: 1
+  # 默认的时间单位，默认为 MINUTES
   default-time-unit: MINUTES
+
+  # 默认的 Redis Key 过期时间（秒），默认为 180
   default-expiration: 180
 
-  # 默认阈值配置
-  default-warn-threshold: 10
-  default-ban-threshold: 20
-
-  # 其他默认配置
-  default-fail-fast: true
+  # 默认的错误消息，当请求被拒绝时返回
   default-error-message: "访问频率过高，请稍后再试"
 
-# Redis配置（如果使用Redis计数器）
+  # 本地计数器（Caffeine）的全局最大缓存条目数，默认为 10000
+  local-counter-max-size: 10000
+
+  # 核心改动：配置全局默认的访问控制规则列表
+  # 当 @GuardianCheck 注解的 rules 属性为空时，将使用此处的配置
+  default-rules:
+    # 规则一：当计数值达到 20 时
+    - count: 20
+      # 规则级别，用于告警和日志
+      level: "WARN"
+      # 执行的策略列表（需要确保这些 Bean 存在）
+      strategies:
+        - "logOnlyStrategy" # 只记录日志
+
+    # 规则二：当计数值达到 50 时
+    - count: 50
+      level: "CRITICAL"
+      strategies:
+        - "rejectActionStrategy" # 拒绝请求
+        - "mailAlertStrategy"  # 发送邮件告警（假设存在这个策略Bean）
+
+# ===================================================================
+# Spring Boot 基础配置 (示例)
+# ===================================================================
+# 如果使用 Redis 计数器，需要提供 Redis 的连接信息
 spring:
   redis:
     host: localhost
